--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap4/css/bootstrap.css";
+
+.center {
+  width: 50%;
+  margin: 0 auto;
+}
+.margin-top25 {
+  margin-top: 25px;
+}
+.height90vh {
+  height: 90vh;
+}
+.border {
+  border: 1px solid lightgray;
+}
+.margin-left10px{
+    margin-left:10px;
+}
+.chat-box
+{
+  background-color:rgb(203, 203, 238);
+}
+.title
+{
+  background-color: darkblue;
+  color: white;
+  font-size: 1.2em;
+  padding: 5px 0 5px 10px;
+}
